style: prettier formatting

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: #1E3A8A; /* Blue background */
+  background-color: #1e3a8a; /* Blue background */
   color: #fff;
   padding: 1rem;
 }
@@ -8,7 +8,7 @@ ul {
   list-style: none;
   padding: 0;
 }
- 
+
 li {
   display: inline;
   margin-right: 1rem;
@@ -20,13 +20,12 @@ li {
 }
 
 .navbar a:hover {
-  color: #93C5FD; /* Light blue hover color */
+  color: #93c5fd; /* Light blue hover color */
 }
 
 .active {
   font-weight: bold;
 }
-
 
 .page-content {
   padding: 2rem;
@@ -34,7 +33,7 @@ li {
 
 .page-content h1 {
   font-size: 2rem;
-  color: #1E3A8A; /* Blue color */
+  color: #1e3a8a; /* Blue color */
 }
 
 .page-content p {
